--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <div class="row align-items-center">
               
             <div class="col-md-7 mx-auto text-center">
-              <h1 class="heading gsap-reveal-hero">Hello</h1>
-              <h2 class="subheading gsap-reveal-hero">I’m Zahri Rusli Software Engineer Based In Jakarta</h2>
+              <h1 class="heading gsap-reveal-hero" style="color:black" >Hello</h1>
+              <h2 class="subheading gsap-reveal-hero text-black" style="color:black;" >I’m Zahri Rusli Software Engineer Based In Jakarta</h2>
             </div>
 
           </div>
