--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@
                 <li><a href="#contact-section" class="nav-link"></a></li>
               </ul>
 
-              <ul class="site-nav-ul-none-onepage text-right d-inline-block d-lg-none">
-                <li><a href="#" class="js-menu-toggle">Menu</a></li>
-              </ul>
-
             </div>
           </div>
         </div>
@@ -82,13 +78,21 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg_2.jpg');" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover.jpeg');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
               
             <div class="col-md-7 mx-auto text-center">
-              <h1 class="heading gsap-reveal-hero" style="color:black" >Hello</h1>
-              <h2 class="subheading gsap-reveal-hero text-black" style="color:black;" >I’m Zahri Rusli Software Engineer Based In Jakarta</h2>
+              <br><br>
+              <br><br>
+              <br><br>
+              <br><br>
+              <br>
+              <br>
+              <h1 class="heading gsap-reveal-hero"  >Hello</h1>
+              <h2 class="subheading gsap-reveal-hero " style="font-weight:bold" >I’m Zahri Rusli Software Engineer Based In Jakarta</h2>
+              <br>
+              <br>
             </div>
 
           </div>
@@ -143,7 +147,7 @@
           <div class="row mt-5 justify-content-between">
             <div class="col-lg-7 mb-5 mb-lg-0">
               <figure class="dotted-bg gsap-reveal-img ">
-                <img src="images/about_me_pic2.jpg" alt="Image" class="img-fluid">
+                <img src="images/about.jpg" alt="Image" class="img-fluid">
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
