--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               <br><br>
               <br>
               <br>
-              <h1 class="heading gsap-reveal-hero"  >Hello</h1>
-              <h2 class="subheading gsap-reveal-hero " style="font-weight:bold" >I’m Zahri Rusli Software Engineer Based In Jakarta</h2>
+              <h1 class="heading gsap-reveal-hero"  >Hello,</h1>
+              <h2 class="subheading gsap-reveal-hero " style="font-weight:bold" >I’m Zahri Rusli A Software Engineer Based In Jakarta</h2>
               <br>
               <br>
             </div>
@@ -151,7 +151,7 @@
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
-              <p class="lead gsap-reveal">Innovative tech mind with more than 2 years of experience working as a computer programmer</p>
+              <p class="lead gsap-reveal">Innovative tech mind with about 3 years of experience working as a computer programmer</p>
               <p class="mb-4 gsap-reveal">Problem solver, communicative, both individual and team player, hard worker and eager to learn.</p>
               <p class="mb-4 gsap-reveal" >I like traveling and photography, fan of sport activities (Swim, Badminton)</p>
               <p class="gsap-reveal"><a href="https://drive.google.com/file/d/1YSU8yRUC8Fy32t6sW-AyPs3dOAnEkhBM/view?usp=sharing" target="_blank" class="btn btn-outline-pill btn-custom-light">My Resume</a></p>
@@ -165,64 +165,73 @@
         <div class="container">
 
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">My Services</span></h2>
+            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">My Project</span></h2>
             <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
           </div>
 
           <div class="row gutter-v3">
             <div class="col-md-6 col-lg-4 mb-4">
+              <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
+                <div class="wrap-icon mb-3">
+                  <img src="images/svg/laptop-coding.png" alt="Image" width="45">
+                </div>
+                <h3>Arduino Project</h3>
+                <p> Design and development of cluster based protocols for adaptive data transmitting with transmission powe arrangement in 
+                  wireless sensor network envirenment. (tools : C++,Arduiono,nRf24L01)
+              </div> 
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/001-options.svg" alt="Image" width="45">
+                  <img src="images/svg/phonelink-ring.png" alt="Image" width="45">
                 </div>
-                <h3>Digital <br> Strategy</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>HRSystem </h3>
+                <p>Mobile app to manage employee leave system and employee
+                  presence system in Telin Malaysia. Employee presence
+                  system using wifi MAC address ( tools : React Native, Js )</p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/002-chat.svg" alt="Icon" width="45">
+                  <img src="images/svg/system-task.png" alt="Icon" width="45">
                 </div>
-                <h3>Web <br> Design</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3> Human Resource Integrated System </h3>
+                <p> Web AppFeature to automation salary grade increase for employee
+                  PT BADAK LNG ( tools: Spring Framework, Java, Oracle ) </p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
+                  <img src="images/svg/web-design--v1.png" alt="Image" class="img-fluid" width="45">
                 </div>
-                <h3>User <br> Experience</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Smart Medical Asset System</h3>
+                <p>Web App to manage medical asset in hospital, procurement,
+                  registration, usage, maintenance, disposal ( tools : React.Js) </p>
               </div> 
             </div>
 
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/004-percentage.svg" alt="Image" width="45">
+                  <img src="images/svg/web-design--v1.png" alt="Image" width="45">
                 </div>
-                <h3>Web <br> Development</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
-              </div> 
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
-                <div class="wrap-icon mb-3">
-                  <img src="images/svg/006-goal.svg" alt="Image" width="45">
-                </div>
-                <h3>WordPress <br> Solutions</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Tcare</h3>
+                <p>Web Application
+                  Web application can be used to fundraising and donation
+                  (tools: PHP, Laravel ) </p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
+                  <img src="images/svg/system-task.png" alt="Image" width="45">
                 </div>
-                <h3>Mobile <br> Applications</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>ERMA</h3>
+                <p>Dekstop app to calclulate elektromagnetic risk management system for PETRONAS Malaysia
+                  (tools: c++,QTCreator)
+                </p>
               </div> 
             </div>
 
@@ -276,8 +285,8 @@
                   <div class="overlay">
                       <span class="wrap-icon icon-play_circle_filled"></span>
                       <div class="portfolio-item-content">
-                        <h3>Showreel 2019</h3>
-                        <p>web, branding</p>
+                        <h3>Semarang</h3>
+                        <p>Mar, 2017</p>
                       </div>
                     </div>
                     <img src="images/work_8_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -302,8 +311,8 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Render Packaging</h3>
-                        <p>web, illustration</p>
+                        <h3>Batusangkar</h3>
+                        <p>Jul, 2018</p>
                       </div>
                     </div>
                     <img src="images/work_5_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -315,8 +324,8 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Watch</h3>
-                        <p>web, packaging</p>
+                        <h3>Batusangkar</h3>
+                        <p>Jul, 2018</p>
                       </div>
                     </div>
                     <img src="images/work_4_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -328,8 +337,8 @@
                   <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Sanur</h3>
-                        <p>Oct, 2020</p>
+                        <h3>Surabaya</h3>
+                        <p>Jan, 2018</p>
                       </div>
                     </div>
                     <img src="images/work_2_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -340,8 +349,8 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Shoe Rebranding</h3>
-                        <p>illustration, packaging</p>
+                        <h3>Surabaya</h3>
+                        <p>Feb, 2018</p>
                       </div>
                     </div>
                     <img src="images/work_10_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -353,8 +362,8 @@
                   <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Reshape</h3>
-                        <p>web, branding</p>
+                        <h3>Solok Selatan</h3>
+                        <p>Jul, 2016</p>
                       </div>
                     </div>
                     <img src="images/work_9_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -366,8 +375,8 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
+                        <h3>Banyuwangi</h3>
+                        <p>Mar, 2018</p>
                       </div>
                     </div>
                     <img src="images/work_7_md.jpg" class="lazyload  img-fluid" alt="Images" />
