--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="background-image: url('images/cover.jpeg');" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover.png');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
               
