--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="background-image: url('images/cover.png');" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover-min.jpg');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
               
             <div class="col-md-7 mx-auto text-center">
-              <br><br>
-              <br><br>
+              
               <br><br>
               <br><br>
               <br>
