--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
-              <p class="lead gsap-reveal">Innovative tech mind with about 3 years of experience working as a computer programmer</p>
+              <p class="lead gsap-reveal">Innovative tech mind with more than 3 years of experience working as a software engineer</p>
+              <p class="mb-4 gsap-reveal">Have experience in Oil & Gas Company, Autocare  Startup Company, And Logistic Company.</p>
               <p class="mb-4 gsap-reveal">Problem solver, communicative, both individual and team player, hard worker and eager to learn.</p>
-              <p class="mb-4 gsap-reveal" >I like traveling and photography, fan of sport activities (Swim, Badminton)</p>
-              <p class="gsap-reveal"><a href="https://drive.google.com/file/d/1YSU8yRUC8Fy32t6sW-AyPs3dOAnEkhBM/view?usp=sharing" target="_blank" class="btn btn-outline-pill btn-custom-light">My Resume</a></p>
+             <p class="mb-4 gsap-reveal" >I like traveling and photography, fan of sport activities (Swim, Badminton)</p>
+              <p class="gsap-reveal"><a href="https://intip.in/cvzahrirusli" target="_blank" class="btn btn-outline-pill btn-custom-light">My Resume</a></p>
             </div>
           </div>
         </div>
