--- a/index.html
+++ b/index.html
@@ -214,12 +214,11 @@
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/web-design--v1.png" alt="Image" width="45">
-                </div>
-                <h3>Tcare</h3>
-                <p>Web Application
-                  Web application can be used to fundraising and donation
-                  (tools: PHP, Laravel ) </p>
+                  <img src="images/svg/phonelink-ring.png" alt="Image" width="45">
+                <h3>Sahabat UDD</h3>
+                <p>Mobile Application
+                  Mobile Application to support PMI Semarang in the blood donation registration process
+                  (tools: Js, React Native ) </p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
