--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/phonelink-ring.png" alt="Image" width="45">
+                </div>
                 <h3>Sahabat UDD</h3>
                 <p>Mobile Application
                   Mobile Application to support PMI Semarang in the blood donation registration process
