--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <p class="lead gsap-reveal">Innovative tech mind with more than 3 years of experience working as a Software Engineer. Have experience in Oil & Gas Company, Autocare  Startup Company, And Logistic Company.</p>
              <p class="mb-4 gsap-reveal">Problem solver, communicative, both individual and team player, hard worker and eager to learn.</p>
              <p class="mb-4 gsap-reveal" >I like traveling and photography, fan of sport activities (Swim, Badminton)</p>
-              <p class="gsap-reveal"><a href="https://intip.in/cvzahrirusli" target="_blank" class="btn btn-outline-pill btn-custom-light">My Resume</a></p>
+              <p class="gsap-reveal"><a href="https://intip.in/cvzahrirusli2023" target="_blank" class="btn btn-outline-pill btn-custom-light">My Resume</a></p>
             </div>
           </div>
         </div>
