--- a/index.html
+++ b/index.html
@@ -174,6 +174,33 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/laptop-coding.png" alt="Image" width="45">
                 </div>
+                <h3>GraphQL API for last-mile apps</h3>
+                <p> GraphQL API for last-mile apps manage in fullfilment process, Apps to manage contract, Project, Delivery Order, Master Supply Tracker. (tools : Go,PostgreSQL,GraphQL,Kafka)
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
+                <div class="wrap-icon mb-3">
+                  <img src="images/svg/web-design--v1.png" alt="Image" width="45">
+                </div>
+                <h3>MXStation Store Management System </h3>
+                <p>Web app to manage store in speedwork indonesia, Manage stock opname, purchase order, store condition and mechanics attendance ( tools : PHP, MySQL )</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
+                <div class="wrap-icon mb-3">
+                  <img src="images/svg/web-design--v1.png" alt="Icon" width="45">
+                </div>
+                <h3> Petrotechnical Data Management Web App </h3>
+                <p> Web App Feature to manage subsurface data like STPF, Automation Report, Sebsurface Data and etc At Medco E&P Indonesia ( tools: Python, Django, Flask,Sql server,RabbitMQ ) </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
+                <div class="wrap-icon mb-3">
+                  <img src="images/svg/laptop-coding.png" alt="Image" width="45">
+                </div>
                 <h3>Arduino Project</h3>
                 <p> Design and development of cluster based protocols for adaptive data transmitting with transmission powe arrangement in 
                   wireless sensor network envirenment. (tools : C++,Arduiono,nRf24L01)
@@ -210,7 +237,6 @@
                   registration, usage, maintenance, disposal ( tools : React.Js) </p>
               </div> 
             </div>
-
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                 <div class="wrap-icon mb-3">
