--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   <img src="images/svg/laptop-coding.png" alt="Image" width="45">
                 </div>
                 <h3>GraphQL API for last-mile apps</h3>
-                <p> GraphQL API for last-mile apps manage in fullfilment process, Apps to manage contract, Project, Delivery Order, Master Supply Tracker. (tools : Go,PostgreSQL,GraphQL,Kafka)
+                <p> GraphQL API  to manage last-mile process in Kargo Technologies , my contribution in fullfilment process, Like manage Contract, Project, AWB, Delivery Order, Master Supply Tracker & etc. ( tools : Go, PostgreSQL, GraphQL, Kafka)
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
@@ -184,7 +184,7 @@
                   <img src="images/svg/web-design--v1.png" alt="Image" width="45">
                 </div>
                 <h3>MXStation Store Management System </h3>
-                <p>Web app to manage store in speedwork indonesia, Manage stock opname, purchase order, store condition and mechanics attendance ( tools : PHP, MySQL )</p>
+                <p>Web app to manage store in Speedwork Indonesia, Manage stock management, purchase order, store condition and mechanics management ( tools : PHP, MySQL )</p>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
@@ -193,7 +193,7 @@
                   <img src="images/svg/web-design--v1.png" alt="Icon" width="45">
                 </div>
                 <h3> Petrotechnical Data Management Web App </h3>
-                <p> Web App Feature to manage subsurface data like STPF, Automation Report, Sebsurface Data and etc At Medco E&P Indonesia ( tools: Python, Django, Flask,Sql server,RabbitMQ ) </p>
+                <p> Web App Feature to manage subsurface data like STPF, Automation Report, Sebsurface Data and etc At Medco E&P Indonesia ( tools: Python, Django, Flask, Sql server, RabbitMQ ) </p>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
